--- a/app/src/main/res/layout/fragment_answer.xml
+++ b/app/src/main/res/layout/fragment_answer.xml
@@ -18,14 +18,25 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.234" />
 
-    <Button
-        android:id="@+id/btnViewComments"
+    <TextView
+        android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="136dp"
-        android:text="View Your Comments"
+        android:layout_marginTop="108dp"
+        android:text="View all question existing in the server"
         app:layout_constraintEnd_toEndOf="@+id/btnViewAllQuestion"
-        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintStart_toStartOf="@+id/btnViewAllQuestion"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="316dp"
+        android:layout_height="47dp"
+        android:layout_marginTop="8dp"
+        android:text="Click the question you want to answer to direct to comment page!"
+        android:textAlignment="center"
+        app:layout_constraintEnd_toEndOf="@+id/btnViewAllQuestion"
         app:layout_constraintStart_toStartOf="@+id/btnViewAllQuestion"
         app:layout_constraintTop_toBottomOf="@+id/btnViewAllQuestion" />
 
