--- a/app/src/main/res/layout/activity_answer.xml
+++ b/app/src/main/res/layout/activity_answer.xml
@@ -68,7 +68,7 @@
         android:layout_width="85dp"
         android:layout_height="27dp"
         android:layout_marginBottom="6dp"
-        android:text="Questoin:"
+        android:text="Question:"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/tvQuestion"
         app:layout_constraintEnd_toEndOf="@+id/tvQuestion"
