--- a/app/src/main/res/layout/fragment_question.xml
+++ b/app/src/main/res/layout/fragment_question.xml
@@ -6,13 +6,26 @@
     android:layout_height="match_parent"
     tools:context=".QuestionFragment">
 
+    <Button
+        android:id="@+id/btnUploadImg"
+        android:layout_width="67dp"
+        android:layout_height="30dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="5dp"
+        android:background="@drawable/custom_button"
+        android:text="Upload"
+        android:textSize="8sp"
+        app:layout_constraintBottom_toTopOf="@+id/quesInputBody"
+        app:layout_constraintEnd_toEndOf="@+id/quesInputBody"
+        app:layout_constraintTop_toBottomOf="@+id/quesDesBody" />
+
     <EditText
         android:id="@+id/quesInputTitle"
-        android:layout_width="399dp"
-        android:layout_height="28dp"
-        android:layout_marginStart="6dp"
-        android:layout_marginEnd="6dp"
-        android:layout_marginBottom="11dp"
+        android:layout_width="401dp"
+        android:layout_height="29dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="15dp"
         android:background="@drawable/custom_input1"
         android:ems="10"
         android:hint="  Title"
@@ -26,11 +39,11 @@
 
     <EditText
         android:id="@+id/quesInputBody"
-        android:layout_width="394dp"
-        android:layout_height="105dp"
-        android:layout_marginStart="9dp"
-        android:layout_marginEnd="9dp"
-        android:layout_marginBottom="7dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="6dp"
+        android:layout_marginEnd="6dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/custom_input1"
         android:ems="10"
         android:hint="  Body"
@@ -39,16 +52,16 @@
         app:layout_constraintBottom_toTopOf="@+id/quesTags"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/quesDesBody"
+        app:layout_constraintTop_toBottomOf="@+id/btnUploadImg"
         tools:ignore="TouchTargetSizeCheck" />
 
     <EditText
         android:id="@+id/quesInputTags"
-        android:layout_width="395dp"
-        android:layout_height="28dp"
+        android:layout_width="396dp"
+        android:layout_height="31dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="17dp"
+        android:layout_marginBottom="10dp"
         android:background="@drawable/custom_input1"
         android:ems="10"
         android:hint="  Tags"
@@ -62,26 +75,25 @@
 
     <Button
         android:id="@+id/btnQuesPost"
-        android:layout_width="84dp"
-        android:layout_height="41dp"
-        android:layout_marginStart="94dp"
-        android:layout_marginTop="19dp"
-        android:layout_marginEnd="36dp"
-        android:layout_marginBottom="21dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="102dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="44dp"
+        android:layout_marginBottom="16dp"
         android:background="@drawable/custom_button"
         android:text="Post"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btnQuesReview"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/quesInputTags"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/quesInputTags" />
 
     <Button
         android:id="@+id/btnQuesReview"
-        android:layout_width="93dp"
-        android:layout_height="40dp"
-        android:layout_marginEnd="82dp"
-        android:layout_marginBottom="22dp"
+        android:layout_width="92dp"
+        android:layout_height="38dp"
+        android:layout_marginEnd="88dp"
+        android:layout_marginBottom="17dp"
         android:background="@drawable/custom_button"
         android:text="Review"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -94,7 +106,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="7dp"
-        android:layout_marginBottom="11dp"
+        android:layout_marginBottom="8dp"
         android:text="Title"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -104,11 +116,11 @@
 
     <TextView
         android:id="@+id/quesDesTitle"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="6dp"
-        android:layout_marginEnd="6dp"
-        android:layout_marginBottom="10dp"
+        android:layout_width="401dp"
+        android:layout_height="39dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="7dp"
         android:text="Be specific and imagine you’re asking a question to another person"
         android:textAlignment="textStart"
         android:textSize="16sp"
@@ -132,13 +144,13 @@
 
     <TextView
         android:id="@+id/quesDesBody"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="9dp"
-        android:layout_marginEnd="9dp"
-        android:layout_marginBottom="18dp"
+        android:layout_width="397dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="7dp"
+        android:layout_marginEnd="7dp"
+        android:layout_marginBottom="7dp"
         android:text="Include all the information someone would need to answer your question"
-        app:layout_constraintBottom_toTopOf="@+id/quesInputBody"
+        app:layout_constraintBottom_toTopOf="@+id/btnUploadImg"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/quesBody" />
@@ -147,8 +159,8 @@
         android:id="@+id/quesTags"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginStart="7dp"
+        android:layout_marginBottom="9dp"
         android:text="Tags"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -161,7 +173,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="8dp"
         android:text="Describe what your question is about"
         app:layout_constraintBottom_toTopOf="@+id/quesInputTags"
         app:layout_constraintStart_toStartOf="parent"
@@ -170,10 +182,10 @@
     <TextView
         android:id="@+id/quesHeader"
         android:layout_width="209dp"
-        android:layout_height="31dp"
+        android:layout_height="32dp"
         android:layout_marginStart="7dp"
         android:layout_marginTop="16dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="13dp"
         android:background="@drawable/custom_input"
         android:text="Ask a public question"
         android:textAlignment="center"
@@ -183,4 +195,5 @@
         app:layout_constraintBottom_toTopOf="@+id/quesTitle"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
