--- a/app/src/main/res/layout/activity_ask_questions.xml
+++ b/app/src/main/res/layout/activity_ask_questions.xml
@@ -153,4 +153,13 @@
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/quesTitle"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/addImageBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        app:layout_constraintTop_toBottomOf="@+id/quesInputBody"
+        app:srcCompat="@android:drawable/ic_menu_add"
+        tools:layout_editor_absoluteX="347dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
