--- a/app/src/main/res/layout/ques_item.xml
+++ b/app/src/main/res/layout/ques_item.xml
@@ -14,6 +14,11 @@
         android:layout_marginVertical="6dp"
         android:orientation="vertical">
 
+        <ImageView
+            android:id="@+id/tvImage"
+            android:layout_width="match_parent"
+            android:layout_height="200dp" />
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
