--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -30,4 +30,9 @@
         android:name="com.example.assignment.AnswerFragment"
         android:label="fragment_answer"
         tools:layout="@layout/fragment_answer" />
+    <fragment
+        android:id="@+id/commentFragment"
+        android:name="com.example.assignment.CommentFragment"
+        android:label="fragment_comment"
+        tools:layout="@layout/fragment_comment" />
 </navigation>
